--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./dist/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trek Sounds</title>
-    <script src="app.js" defer></script>
+    <script src="./dist/js/main.js" defer></script>
   </head>
 
   <body>
