- Fix window not showing

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./dist/css/style.css" />
+    <link rel="stylesheet" href="./static/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trek Sounds</title>
-    <script src="./dist/js/main.js" defer></script>
+    <script src="./static/js/main.js" defer></script>
   </head>
 
   <body>
@@ -111,13 +111,13 @@
       <section class="sounds">
         <ul class="lcars-button-group">
           <li>
-            <button data-action="set-current" data-src="assets/audio/tng_bridge_1.mp3" data-name="tng-bridge" class="lcars-button lcars-button--gold lcars-text--l">TNG Bridge<span class="lcars-button__indicator"></span></button>
+            <button data-action="set-current" data-src="assets/audio/tng_bridge_1.mp3" data-name="tng-bridge" class="lcars-button lcars-button--split lcars-button--gold lcars-text--l">TNG Bridge<span class="lcars-button__indicator"></span></button>
           </li>
           <li>
-            <button data-action="set-current" data-src="assets/audio/tng_sickbay_2.mp3" data-name="sick-bay" class="lcars-button lcars-button--blue-navy lcars-text--l">Sick Bay<span class="lcars-button__indicator"></span></button>
+            <button data-action="set-current" data-src="assets/audio/tng_sickbay_2.mp3" data-name="sick-bay" class="lcars-button lcars-button--split lcars-button--blue-navy lcars-text--l">Sick Bay<span class="lcars-button__indicator"></span></button>
           </li>
           <li>
-            <button data-action="set-current" data-src="assets/audio/tng_commandcenter.mp3" data-name="space" class="lcars-button lcars-button--red lcars-text--l">Space<span class="lcars-button__indicator"></span></button>
+            <button data-action="set-current" data-src="assets/audio/tng_commandcenter.mp3" data-name="space" class="lcars-button lcars-button--split lcars-button--red lcars-text--l">Space<span class="lcars-button__indicator"></span></button>
           </li>
         </ul>
       </section>
@@ -128,7 +128,7 @@
 
       <section class="controls">
         <ul class="lcars-button-group lcars-button-group--grid">
-          <li><button data-action="play" class="lcars-button lcars-button--pill lcars-button--orange lcars-text--m">01-Play</button></li>
+          <li><button data-action="play" class="lcars-button lcars-button--pill lcars-button--orange lcars-text--m">01-Awaiting Src</button></li>
           <li><button data-action="settings" class="lcars-button lcars-button--pill lcars-button--mauve lcars-text--m">02-Settings</button></li>
           <li><button data-action="timer" class="lcars-button lcars-button--pill lcars-button--lilac lcars-text--m">03-Timer</button></li>
           <li><button data-action="stop" class="lcars-button lcars-button--pill lcars-button--gold lcars-text--m">04-Stop</button></li>
